# iceduke3d

code/: CMakeLists.txt
code/Engine/src/: display.c  engine.c
code/Game/: CMakeLists.txt
code/Game/src/: config.c  duke3d.h  dukewin.h  game.c  gamedef.c  player.c  premap.c  sector.c
code/GameDLL/: CMakeLists.txt  actor_blimp.cpp  actor_breakables.cpp  actor_core.cpp  actor_core.h  actor_player.cpp  defs.h  dllmain.cpp  females.cpp  gamedll.h  gibs.cpp  gibs.h  items.cpp  toilet.cpp
